[package]
name = "ninomae"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.14", features = ["derive"] }
num = {version = "0.4.1", features = ["serde"] }
serde = {version = "1.0.197", features = ["derive", "rc"]}
serde_json = "1.0.114"
